--- a/sites/all/themes/custom/synergy_subtheme/assets/scss/base/_common.scss
+++ b/sites/all/themes/custom/synergy_subtheme/assets/scss/base/_common.scss
@@ -130,12 +130,20 @@
 
 .l-branding.site-branding {
   float: none;
-  width: 100%;
+  width: initial;
+  margin: 0;
 
   .site-branding__logo {
     display: block;
   }
 }
+
+body.page-user {
+  .l-branding.site-branding {
+    width: 100%;
+  }
+}
+
 .l-main.l-constrained {
   margin: 0;
   width: 100%;
